--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,10 +3,212 @@
     margin: 0px;
     box-sizing: border-box;
 }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+.conteiner {
+    max-width: 1920px;
+    margin: 0 auto;
+
+    header {
+        height: 120px;
+        width: 100%;
+        border-bottom: 2px solid gainsboro;
+        margin-bottom: 100px;
+
+        .header_top {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            height: 50%;
+
+            .header_top_left {
+                display: flex;
+                align-items: center;
+                height: 50%;
+                gap: 50px;
+
+                form {
+                    height: 54px;
+                    width: 870px;
+                    background-color: #F5F5F5;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    border-radius: 30px;
+                    padding: 0 20px;
+
+                    div {
+                        display: flex;
+                        align-items: center;
+                        gap: 20px;
+                    }
+
+                    input {
+                        all: unset;
+                        width: 770px;
+                        // background-color: red;
+                        height: 54px;
+                    }
+
+                    img {
+                        cursor: pointer;
+                    }
 
 
-body {
-    background-color: red;
-    width: 100%;
-    height: 100vh;
+                }
+            }
+
+
+            .login {
+                display: flex;
+                align-items: center;
+                gap: 15px;
+
+                img {
+                    width: 16px;
+                    height: 16px;
+                }
+
+                .log_in {
+                    all: unset;
+                    width: 195px;
+                    height: 45px;
+                    display: flex;
+                    align-items: center;
+                    background-color: transparent;
+                    gap: 15px;
+                    border-radius: 30px;
+                    padding: 0 0px 0 10px;
+                    transition: 0.1s ease;
+                    cursor: pointer;
+
+                    &:hover {
+
+                        background-color: #F5F5F5;
+                    }
+                }
+
+                .btn {
+                    all: unset;
+
+                    width: 45px;
+                    height: 45px;
+                    transition: 0.1s ease;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-radius: 100%;
+                    cursor: pointer;
+
+                    &:hover {
+                        background-color: #F5F5F5;
+                    }
+                }
+            }
+
+            .logo {
+                display: block;
+                width: 90px;
+                height: 36px;
+                background-color: rebeccapurple;
+
+            }
+
+        }
+
+        .header_bottom {
+            width: 100%;
+            height: 50%;
+            // background-color: red;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            .header_bottom_left {
+                display: flex;
+                align-items: center;
+                gap: 35px;
+
+
+                a {
+                    all: unset;
+                    cursor: pointer;
+
+                    p {
+                        font-size: 23px;
+                    }
+
+                    &:hover {
+                        text-decoration: underline;
+                    }
+
+                }
+
+            }
+
+            .header_bottom_right {
+                display: flex;
+                align-items: center;
+                gap: 40px;
+
+                a {
+                    all: unset;
+
+                    p {
+                        display: flex;
+                        align-items: center;
+                        gap: 15px;
+
+                        img {
+                            width: 30px;
+                            height: 30px;
+
+                        }
+
+                        span {
+                            font-size: 23px;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+
+    .amin_cont {
+        width: 100%;
+        height: 450px;
+        display: flex;
+        gap: 30px;
+        overflow-x: scroll;
+
+        .box {
+            height: 100%;
+            min-width: 300px;
+            background-color: blue;
+            display: flex;
+            align-items: flex-end;
+            background-position: center;
+            background-size: cover;
+
+            .link_room {
+                all: unset;
+                width: 150px;
+                height: 55px;
+                border-radius: 30px;
+                background-color: white;
+                margin: 100px auto;
+                text-align: center;
+                cursor: pointer;
+                transition: 0.3s ease;
+
+                &:hover {
+                    background-color: gainsboro;
+                }
+            }
+        }
+    }
+
+
+
 }
+
