--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,9 +2,177 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    font-family: 'Montserrat';
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+.btn{
+    
+    border-radius: 20px;
+    &:hover {
+        background-color: #e9e9e9;
+    }
+}
+.window_bg{
+    display: none;
+
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9998;
+    background-color: rgba(0, 0, 0, 0.314);
+    transition: 0.4s ease;
+
+}
+.menu_main {
+    display: block;
+    width: 480px;
+    position: fixed;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: white;
+    padding-left: 150px;
+    transition: 0.4s ease;
+    z-index: 9999;
+
+    .menu_header {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 100px;
+        padding-top: 12px;
+        position: absolute;
+        padding-left: 150px;
+        top: 0;
+        left: 0;
+        background-color: white;
+        .close_menu {
+            width: 24px;
+            height: 24px;
+            background-image: url(../icons/close_menu.svg);
+            position: absolute;
+            top: 18px;
+            left: 60px;
+            cursor: pointer;
+        }
+
+        .menu_logo {}
+
+        z-index: 2;
+    }
+    .menu_main_cont{
+        width: 100%;
+        height: 100%;
+        overflow-y: scroll;
+        padding-top: 100px;
+        flex-direction: column;
+        gap: 18px;
+        .go_back{
+            width: 24px;
+            position: fixed;
+            top: 100px;
+            left: 60px;
+            cursor: pointer;
+        }
+        .active{
+            text-decoration: underline;
+        }
+        a{
+            all: unset;
+            cursor: pointer;
+            h1{
+                font-size: 36px;
+            }
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+        .menu_bottom{
+            width: 100%;
+            display: flex;
+            margin: 50px 0;
+            gap: 10px;
+            .global {
+
+                all: unset;
+    
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                padding: 10px 20px;
+                border: #c0c0c0 1px solid;
+                border-radius: 20px;
+    
+                &:hover {
+                    border: black 1px solid;
+    
+                }
+            }
+    
+            select {
+                display: block;
+                align-items: center;
+                gap: 10px;
+                padding: 12px 20px;
+                border: #c0c0c0 1px solid;
+                border-radius: 20px;
+                background-color: transparent;
+    
+                &:hover {
+                    border: black 1px solid;
+    
+                }
+            }
+        }
+        .menu_searsh{
+            cursor: pointer;
+
+            h1{
+                font-size: 36px;
+            }
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+
+        .menu_create_rooms{
+            display: grid;
+            grid-template-columns: repeat(2 , 1fr);
+            grid-gap: 10px;
+            grid-row-gap: 30px;
+            padding-right: 20px;
+            .rooms_box{
+                width: 95%;
+                height: 120px;
+                transition: 0.3 ease;
+                font-size: 15px;
+                img{
+                    width: 100%;
+                    height: 80%;
+                }
+            }
+        }
+    }
+    #main{
+        display: flex;
+    }
+    #products{
+        display: none;
+    }
+    #rooms{
+        display: none;
+    }
+    #news{
+        display: none;
+    }
+    #offers{
+        display: none;
+    }
+}
 
 .conteiner {
     max-width: 1920px;
@@ -12,17 +180,19 @@
     padding: 0 10%;
     position: relative;
 
-    .menu {
+    .menu_btn {
         width: 40px;
         position: fixed;
-        top: 10px;
+        top: 30px;
         left: 5%;
         display: flex;
         align-items: center;
         flex-direction: column;
         cursor: pointer;
+
         img {
             border-radius: 100%;
+
             &:hover {
                 background-color: #e9e9e9;
             }
@@ -33,7 +203,7 @@
         height: 120px;
         width: 100%;
         border-bottom: 2px solid gainsboro;
-        margin-bottom: 100px;
+        // margin-bottom: 100px;
 
         .header_top {
             display: flex;
@@ -42,6 +212,7 @@
             height: 50%;
 
             .header_top_left {
+                width: 60%;
                 display: flex;
                 align-items: center;
                 height: 50%;
@@ -49,7 +220,7 @@
 
                 form {
                     height: 54px;
-                    width: 870px;
+                    width: 100%;
                     background-color: #F5F5F5;
                     display: flex;
                     align-items: center;
@@ -65,7 +236,7 @@
 
                     input {
                         all: unset;
-                        width: 770px;
+                        width: 70%;
                         // background-color: red;
                         height: 54px;
                     }
@@ -201,6 +372,7 @@
         display: flex;
         gap: 30px;
         overflow-x: scroll;
+        margin-top: 100px;
 
         .box {
             height: 100%;
@@ -323,8 +495,12 @@ footer {
             align-items: center;
             justify-content: space-between;
             margin-top: 100px;
+            flex-wrap: wrap;
 
             .footer_middle_left {
+                width: 50%;
+
+                // background-color: red;
                 .footer_middle_left_ul {
                     display: flex;
                     align-items: center;
@@ -334,7 +510,7 @@ footer {
 
 
                         all: unset;
-                        width: 50px;
+                        width: 60px;
                         height: 50px;
                         display: flex;
                         align-items: center;
@@ -348,6 +524,8 @@ footer {
 
                         .img2 {
                             width: 34px;
+
+
                         }
 
                         cursor: pointer;
@@ -360,19 +538,22 @@ footer {
 
                     .bor {
                         border-radius: 10px;
-                        width: 60px;
-                        height: 50px;
+                        width: 50px;
+                        height: 40px;
                     }
                 }
             }
 
             .footer_middle_right {
+                width: 30%;
                 display: flex;
                 align-items: center;
                 gap: 50px;
 
                 a {
+
                     all: unset;
+
                     display: flex;
                     align-items: center;
                     gap: 10px;
@@ -442,7 +623,7 @@ footer {
 
 
 .amirjon_cont_means_of_communication {
-    width: 1620px;
+    width: 100%;
     margin: 100px auto;
     display: flex;
     align-items: center;
@@ -471,7 +652,7 @@ footer {
 }
 
 .amirjon_cont_additional_information {
-    width: 1620px;
+    width: 100%;
     height: 600px;
     margin: 0 auto;
     display: flex;
@@ -509,14 +690,14 @@ footer {
 }
 
 .amirjon_hr {
-    width: 1620px;
+    width: 100%;
     margin: 10px auto;
     border: none;
     border-top: 1px solid grey;
 }
 
 .amirjon_cont_additional_information_two {
-    width: 1620px;
+    width: 100%;
     height: 600px;
     margin: 0 auto;
     display: flex;
