--- a/scss/like.scss
+++ b/scss/like.scss
@@ -110,8 +110,8 @@
             margin: 50px 0;
 
             .br {
-                min-width: 300px;
                 width: fit-content;
+                white-space: nowrap;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -120,6 +120,7 @@
                 text-align: left;
                 background-color: #e9e9e9;
                 border-radius: 20px;
+                padding: 10px 20px;
                 // padding: 30px;
             }
 
@@ -175,4 +176,11 @@
             color: white;
         }
     }
+}
+
+.like_variant {
+    background-color: white;
+    position: sticky;
+    top: 0px;
+    padding: 25px 0px;
 }
