--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,14 +7,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.btn{
-    
+.btn {
+
     border-radius: 20px;
+
     &:hover {
         background-color: #e9e9e9;
     }
 }
-.window_bg{
+
+.window_bg {
     display: none;
 
     width: 100%;
@@ -27,6 +29,7 @@
     transition: 0.4s ease;
 
 }
+
 .menu_main {
     display: none;
     width: 480px;
@@ -50,6 +53,7 @@
         top: 0;
         left: 0;
         background-color: white;
+
         .close_menu {
             width: 24px;
             height: 24px;
@@ -64,55 +68,63 @@
 
         z-index: 2;
     }
-    .menu_main_cont{
+
+    .menu_main_cont {
         width: 100%;
         height: 100%;
         overflow-y: scroll;
         padding-top: 100px;
         flex-direction: column;
         gap: 18px;
-        .go_back{
+
+        .go_back {
             width: 24px;
             position: fixed;
             top: 100px;
             left: 60px;
             cursor: pointer;
         }
-        .active{
+
+        .active {
             text-decoration: underline;
         }
-        a{
+
+        a {
             all: unset;
             cursor: pointer;
-            h1{
+
+            h1 {
                 font-size: 36px;
             }
-            &:hover{
+
+            &:hover {
                 text-decoration: underline;
             }
         }
-        .menu_bottom{
+
+        .menu_bottom {
             width: 100%;
             display: flex;
             margin: 50px 0;
             gap: 10px;
+
             .global {
 
                 all: unset;
-    
+
                 display: flex;
                 align-items: center;
                 gap: 10px;
                 padding: 10px 20px;
                 border: #c0c0c0 1px solid;
                 border-radius: 20px;
-    
+
                 &:hover {
                     border: black 1px solid;
-    
+
                 }
             }
-    
+
             select {
                 display: block;
                 align-items: center;
@@ -121,55 +133,64 @@
                 border: #c0c0c0 1px solid;
                 border-radius: 20px;
                 background-color: transparent;
-    
+
                 &:hover {
                     border: black 1px solid;
-    
+
                 }
             }
         }
-        .menu_searsh{
+
+        .menu_searsh {
             cursor: pointer;
 
-            h1{
+            h1 {
                 font-size: 36px;
             }
-            &:hover{
+
+            &:hover {
                 text-decoration: underline;
             }
         }
 
-        .menu_create_rooms{
+        .menu_create_rooms {
             display: grid;
-            grid-template-columns: repeat(2 , 1fr);
+            grid-template-columns: repeat(2, 1fr);
             grid-gap: 10px;
             grid-row-gap: 30px;
             padding-right: 20px;
-            .rooms_box{
+
+            .rooms_box {
                 width: 95%;
                 height: 120px;
                 transition: 0.3 ease;
                 font-size: 15px;
-                img{
+
+                img {
                     width: 100%;
                     height: 80%;
                 }
             }
         }
     }
-    #main{
+
+    #main {
         display: flex;
     }
-    #products{
+
+    #products {
         display: none;
     }
-    #rooms{
+
+    #rooms {
         display: none;
     }
-    #news{
+
+    #news {
         display: none;
     }
-    #offers{
+
+    #offers {
         display: none;
     }
 }
@@ -820,6 +841,53 @@ footer {
 
         .item:nth-child(3) .decription {
             background-color: #CA5008 !important;
+        }
+    }
+}
+
+
+
+.time_cont {
+    width: 100%;
+    height: 500px;
+    background-image: url(https://static.mvideo.ru/media/Promotions/Promo_Page/2022/October/chyornaya-pyatnica-skidki/img/bf/bg-timer.png);
+    background-position: center;
+    background-size: cover;
+
+    .time {
+        color: white;
+        height: 100%;
+        width: 40%;
+        margin: 0 auto;
+        text-align: center;
+        padding-top: 50px;
+
+        .time_main {
+            margin-top: 50px;
+            display: flex;
+            align-items: center;
+
+            justify-content: space-between;
+
+            .time_box {
+                width: 25%;
+
+                p {
+                    font-size: 150px;
+
+                }
+
+                span {
+                    font-size: 30px;
+                    display: block;
+                    margin-top: 100px;
+                }
+
+            }
+
+            .activetime {
+                border-right: 1px solid #c0c0c0;
+            }
         }
     }
 }
