--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,7 +36,7 @@
     position: fixed;
     height: 100%;
     top: 0;
-    left: 0;
+    left: -100%;
     background-color: white;
     padding-left: 150px;
     transition: 0.4s ease;
