--- a/scss/style.scss
+++ b/scss/style.scss
@@ -205,8 +205,8 @@
     .menu_btn {
         width: 40px;
         position: sticky;
-        top: 50px;
-        margin-left: -100px;
+        top: 10px;
+        translate: -100px;
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -225,7 +225,7 @@
         height: 120px;
         width: 100%;
         border-bottom: 2px solid gainsboro;
-        margin-bottom: 100px;
+        margin-bottom: 10px;
         
         .header_top {
             display: flex;
